feat: S12P21A601:[BE] 약속 장소 추천 및 관리 기능 구현 장소 검색 및 관리 기능 추가(코드 리뷰 피드백. Response의 일관성으 유지하기 위해 Map 대신 DTO 사용하기)